# simpleImageFilters

./: CMakeLists.txt  README.md  main.cpp
benchmarks/: benchmark.py  plot_results.py
benchmarks/results/: results.csv
src/: filter_cpu.cpp  filter_cuda.cu  sobel_cpu.cpp  sobel_kernel.cu
